--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="http://127.0.0.1:8081/login" method="post" role="form" style="display: block;">
+								<form id="login-form"  role="form" style="display: block;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value=""required>
 									</div>
